--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
 
     "require": {
-        "php":                      "^7.1.3",
+        "php":                      "^7.1.3|^8.0",
         "symfony/framework-bundle": "~3.4|^4.0|^5.0",
         "symfony/dependency-injection": "~3.4|^4.0|^5.0",
         "michelf/php-markdown":     "~1.4"
